fixing spacing on media and fixing default url not loggin in

--- a/tesla-client/src/Assets/Styles/Sass/main.sass
+++ b/tesla-client/src/Assets/Styles/Sass/main.sass
@@ -279,11 +279,16 @@ body
     height: 20px
     border-radius: 20px
 
+.media-control_button-container
+    display: flex
+    justify-content: center
+    margin-top: 25px
+
 .modal--media_controls
     margin: 15px 0
 
 .modal--media_controls .media-control_button
-    font-size: 35px
+    font-size: 39px
     padding: 0 30px
 
 .modal--media_controls #media-volume_level
